fix overflow scroll for userpage applications

--- a/src/app.scss
+++ b/src/app.scss
@@ -459,6 +459,7 @@ a {
   display: inline-block;
   margin-top: 15px;
   padding: 0;
+  overflow: visible !important;
 }
 
 .user-add-projects-button {
